# SqlMentor

./: .ai-jail  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONFIG_ORA_UBUNTU.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: sqlmentor.md
.claude/rules/: architecture.md  sync-checklist.md
.claude/sessions/: 2026-03-04_120000.md  2026-03-04_175500.md  2026-03-05_083000.md  2026-03-05_205738.md  2026-03-06_110735.md  2026-03-06_131725.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
.kiro/specs/: plan-compression.md
.kiro/specs/plan-compression/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: README.md  architecture.md  product.md  structure.md  tech.md
docs/: docker-setup.md  oracle-instant-client.md
powers/sql-tuner/: POWER.md  mcp.json
powers/sql-tuner/steering/: analysis.md
powers/sqlmentor/: POWER.md  mcp.json
powers/sqlmentor/steering/: analysis.md
scripts/: batch_inspect.py  oracle_create_user.sql
src/sql_tuner/: __init__.py  cli.py  collector.py  connector.py  mcp_server.py  parser.py  report.py
src/sql_tuner/queries/: __init__.py  oracle.py
src/sqlmentor/: __init__.py  __main__.py  cli.py  collector.py  connector.py  mcp_server.py  parser.py  report.py
src/sqlmentor/adapters/: __init__.py  base.py
src/sqlmentor/queries/: __init__.py  oracle.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_collector.py  test_connector.py  test_formatting_helpers.py  test_json_report.py  test_markdown_report.py  test_mcp_server.py  test_parser.py  test_plan_analysis.py  test_plan_compression.py  test_report_prune.py
tests/fixtures/: sample_plan.txt
tests/integration/: conftest.py  test_collector.py  test_connection.py  test_explain_plan.py  test_inspect.py  test_report_e2e.py
tests/integration/initdb/: 01_setup.sh
