[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlmentor"
version = "0.1.0"
description = "SqlMentor — CLI para coleta de contexto Oracle para tuning de SQL assistido por IA"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "sqlglot>=20.0.0",
    "oracledb>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
sqlmentor = "sqlmentor.cli:app"
sqlmentor-mcp = "sqlmentor.mcp_server:main"

[project.optional-dependencies]
dev = [
    "hypothesis>=6.0",
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
